tests/invalid/invalid_discrete_param_not_parameter.esm
{
  "esm": "0.1.0",
  "metadata": {
    "name": "InvalidDiscreteParamNotParameter",
    "description": "Discrete parameter refers to a state variable instead of parameter"
  },
  "models": {
    "TestModel": {
      "variables": {
        "x": { "type": "state", "units": "mol", "default": 1.0 },
        "k": { "type": "parameter", "units": "1/s", "default": 0.1 }
      },
      "equations": [
        {
          "lhs": { "op": "D", "args": ["x"], "wrt": "t" },
          "rhs": { "op": "*", "args": [-1, "k", "x"] }
        }
      ],
      "discrete_events": [
        {
          "name": "invalid_discrete_update",
          "trigger": {
            "type": "periodic",
            "interval": 60.0
          },
          "affects": [
            {
              "lhs": "k",
              "rhs": { "op": "*", "args": [1.1, "k"] }
            }
          ],
          "discrete_parameters": ["x"]
        }
      ]
    }
  }
}